--- a/yp/ypclnt.3
+++ b/yp/ypclnt.3
@@ -336,7 +336,8 @@ The client cannot communicate with the YP server process.
 .El
 .Sh SEE ALSO
 .Xr malloc 3 ,
+.Xr yp 8 ,
 .Xr ypbind 8 ,
-.Xr yp 8
+.Xr ypserv 8
 .Sh AUTHOR
 Theo De Raadt
