--- a/sys/minherit.2
+++ b/sys/minherit.2
@@ -49,7 +49,8 @@ The
 .Fn minherit
 system call
 changes the specified pages to have the inheritance characteristic
-.Fa inherit .
+.Fa inherit ,
+which can be set to VM_INHERIT_NONE, VM_INHERIT_COPY, or VM_INHERIT_SHARE.
 Not all implementations will guarantee that the inheritance characteristic
 can be set on a page basis;
 the granularity of changes may be as large as an entire region.
