Use .Bx macro in HISTORY

--- a/sys/minherit.2
+++ b/sys/minherit.2
@@ -63,4 +63,5 @@ the granularity of changes may be as large as an entire region.
 .Sh HISTORY
 The
 .Fn minherit
-function first appeared in OpenBSD.
+function first appeared in
+.Bx Open .
