--- a/gen/ftok.3
+++ b/gen/ftok.3
@@ -68,7 +68,7 @@ does not exist or if it cannot be accessed by the calling process.
 .Sh HISTORY
 The
 .Fn ftok
-function originate with System V and is typically used by programs
+function originated with System V and is typically used by programs
 that use the System V IPC routines.
 .Sh AUTHOR
 .Bl -tag
@@ -80,7 +80,7 @@ specified
 .Fa path
 in combination with the given
 .Fa id .
-Thus is is quite possible for the routine to return duplicate keys
+Thus it is quite possible for the routine to return duplicate keys
 given that those fields are not 8- and 16-bit quantities like they
-were on System V based systems where this library routine's ancestor
+were on System V based systems where this library routine's ancestors
 were originally created.
