--- a/sys/msgrcv.2
+++ b/sys/msgrcv.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD$
 .\"	$NetBSD: msgrcv.2,v 1.1 1995/10/16 23:49:20 jtc Exp $	
 .\"
 .\" Copyright (c) 1995 Frank van der Linden
@@ -31,7 +32,7 @@
 .\"/
 .Dd August 17, 1995
 .Dt MSGRCV 2
-.Os NetBSD
+.Os
 .Sh NAME
 .Nm msgrcv
 .Nd receive a message from a message queue
