--- a/sys/semget.2
+++ b/sys/semget.2
@@ -1,3 +1,4 @@
+.\"   $OpenBSD$
 .\"	$NetBSD: semget.2,v 1.1 1995/10/16 23:49:27 jtc Exp $	
 .\"
 .\" Copyright (c) 1995 Frank van der Linden
@@ -31,7 +32,7 @@
 .\"/
 .Dd August 17, 1995
 .Dt SEMGET 2
-.Os NetBSD
+.Os
 .Sh NAME
 .Nm semget
 .Nd get semaphore set
