--- a/gen/getdomainname.3
+++ b/gen/getdomainname.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: getdomainname.3,v 1.3 1996/12/03 00:28:39 deraadt Exp $
+.\"	$OpenBSD: getdomainname.3,v 1.4 1997/03/29 04:22:37 millert Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -41,9 +41,9 @@
 .Sh SYNOPSIS
 .Fd #include <unistd.h>
 .Ft int
-.Fn getdomainname "char *name" "int namelen"
+.Fn getdomainname "char *name" "size_t namelen"
 .Ft int
-.Fn setdomainname "const char *name" "int namelen"
+.Fn setdomainname "const char *name" "size_t namelen"
 .Sh DESCRIPTION
 .Fn Getdomainname
 returns the YP domain name for the current processor, as
