--- a/gen/setmode.3
+++ b/gen/setmode.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: setmode.3,v 1.7 1995/10/12 15:39:28 jtc Exp $
+.\"	$OpenBSD: setmode.3,v 1.3 1996/08/19 08:25:54 tholo Exp $
 .\"
 .\" Copyright (c) 1989, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -101,4 +101,5 @@ The
 .Fn getmode
 and
 .Fn setmode
-functions first appeared in 4.4BSD.
+functions first appeared in
+.Bx 4.4 .
