--- a/gen/sysconf.3
+++ b/gen/sysconf.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: sysconf.3,v 1.3 1996/08/19 08:26:22 tholo Exp $
+.\"	$OpenBSD: sysconf.3,v 1.4 1998/06/02 06:10:24 deraadt Exp $
 .\"
 .\" Copyright (c) 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -185,4 +185,5 @@ function conforms to
 .Sh HISTORY
 The
 .Nm sysconf
-function first appeared in 4.4BSD.
+function first appeared in
+.Bx 4.4 .
