--- a/gen/sysctl.3
+++ b/gen/sysctl.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: sysctl.3,v 1.9 1998/06/02 06:10:27 deraadt Exp $
+.\"	$OpenBSD: sysctl.3,v 1.10 1998/06/11 06:01:04 beck Exp $
 .\"
 .\" Copyright (c) 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -719,4 +719,5 @@ definitions for fourth level UDP identifiers
 .Sh HISTORY
 The
 .Nm sysctl
-function first appeared in 4.4BSD.
+function first appeared in
+.Bx 4.4 .
