--- a/gen/uname.3
+++ b/gen/uname.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: uname.3,v 1.2 1996/08/19 08:27:11 tholo Exp $
+.\"	$OpenBSD: uname.3,v 1.3 1997/05/30 07:48:28 deraadt Exp $
 .\"
 .\" Copyright (c) 1994
 .\"	The Regents of the University of California.  All rights reserved.
@@ -89,4 +89,5 @@ function conforms to
 .Sh HISTORY
 The
 .Nm uname
-function first appeared in 4.4BSD.
+function first appeared in
+.Bx 4.4 .
