--- a/gen/unvis.3
+++ b/gen/unvis.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: unvis.3,v 1.6 1995/10/12 15:39:33 jtc Exp $
+.\"	$OpenBSD: unvis.3,v 1.3 1996/08/19 08:27:14 tholo Exp $
 .\"
 .\" Copyright (c) 1989, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -160,5 +160,5 @@ if (unvis(&out, (char)0, &state, UNVIS_END) == UNVIS_VALID)
 .Sh HISTORY
 The
 .Nm unvis
-function
-first appeared in 4.4BSD.
+function first appeared in
+.Bx 4.4 .
