fix openbsd tag

--- a/sys/getsockname.2
+++ b/sys/getsockname.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: getsockname.2,v 1.6 1995/10/12 15:41:00 jtc Exp $
 .\"	$NetBSD: getsockname.2,v 1.6 1995/10/12 15:41:00 jtc Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
