--- a/sys/minherit.2
+++ b/sys/minherit.2
@@ -1,4 +1,4 @@
-.\"	$Id$
+.\"	$OpenBSD: minherit.2,v 1.6 1998/03/07 22:18:09 millert Exp $
 .\"
 .\" Copyright (c) 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
