--- a/sys/mlock.2
+++ b/sys/mlock.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: mlock.2,v 1.3 1995/06/24 10:42:03 cgd Exp $
 .\"	$NetBSD: mlock.2,v 1.3 1995/06/24 10:42:03 cgd Exp $
 .\"
 .\" Copyright (c) 1993
