--- a/sys/rfork.2
+++ b/sys/rfork.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD$
 .\"
 .\" This manual page is taken directly from Plan9, and modified to
 .\" describe the actual OpenBSD implementation.  Permission for
