--- a/sys/accept.2
+++ b/sys/accept.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: accept.2,v 1.7 1996/01/31 20:14:42 mycroft Exp $
 .\"	$NetBSD: accept.2,v 1.7 1996/01/31 20:14:42 mycroft Exp $
 .\"
 .\" Copyright (c) 1983, 1990, 1991, 1993
