--- a/sys/access.2
+++ b/sys/access.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: access.2,v 1.7 1995/02/27 12:31:44 cgd Exp $
 .\"	$NetBSD: access.2,v 1.7 1995/02/27 12:31:44 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
