--- a/sys/acct.2
+++ b/sys/acct.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: acct.2,v 1.6 1995/02/27 12:31:47 cgd Exp $
 .\"	$NetBSD: acct.2,v 1.6 1995/02/27 12:31:47 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
