--- a/sys/adjtime.2
+++ b/sys/adjtime.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: adjtime.2,v 1.5 1995/10/12 15:40:44 jtc Exp $
 .\"	$NetBSD: adjtime.2,v 1.5 1995/10/12 15:40:44 jtc Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
