--- a/sys/bind.2
+++ b/sys/bind.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: bind.2,v 1.8 1995/10/12 15:40:46 jtc Exp $
 .\"	$NetBSD: bind.2,v 1.8 1995/10/12 15:40:46 jtc Exp $
 .\"
 .\" Copyright (c) 1983, 1993
