--- a/sys/chflags.2
+++ b/sys/chflags.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: chflags.2,v 1.6 1995/02/27 12:32:03 cgd Exp $
 .\"	$NetBSD: chflags.2,v 1.6 1995/02/27 12:32:03 cgd Exp $
 .\"
 .\" Copyright (c) 1989, 1993
