--- a/sys/chroot.2
+++ b/sys/chroot.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: chroot.2,v 1.7 1995/02/27 12:32:12 cgd Exp $
 .\"	$NetBSD: chroot.2,v 1.7 1995/02/27 12:32:12 cgd Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
