--- a/sys/connect.2
+++ b/sys/connect.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: connect.2,v 1.8 1995/10/12 15:40:48 jtc Exp $
 .\"	$NetBSD: connect.2,v 1.8 1995/10/12 15:40:48 jtc Exp $
 .\"
 .\" Copyright (c) 1983, 1993
