--- a/sys/execve.2
+++ b/sys/execve.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: execve.2,v 1.9 1995/02/27 12:32:25 cgd Exp $
 .\"	$NetBSD: execve.2,v 1.9 1995/02/27 12:32:25 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
