--- a/sys/fcntl.2
+++ b/sys/fcntl.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: fcntl.2,v 1.6 1995/02/27 12:32:29 cgd Exp $
 .\"	$NetBSD: fcntl.2,v 1.6 1995/02/27 12:32:29 cgd Exp $
 .\"
 .\" Copyright (c) 1983, 1993
