--- a/sys/flock.2
+++ b/sys/flock.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: flock.2,v 1.5 1995/02/27 12:32:32 cgd Exp $
 .\"	$NetBSD: flock.2,v 1.5 1995/02/27 12:32:32 cgd Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
