--- a/sys/fork.2
+++ b/sys/fork.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: fork.2,v 1.6 1995/02/27 12:32:36 cgd Exp $
 .\"	$NetBSD: fork.2,v 1.6 1995/02/27 12:32:36 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
