--- a/sys/getfh.2
+++ b/sys/getfh.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: getfh.2,v 1.7 1995/10/12 15:40:53 jtc Exp $
 .\"	$NetBSD: getfh.2,v 1.7 1995/10/12 15:40:53 jtc Exp $
 .\"
 .\" Copyright (c) 1989, 1991, 1993
