--- a/sys/getgid.2
+++ b/sys/getgid.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: getgid.2,v 1.5 1995/02/27 12:32:53 cgd Exp $
 .\"	$NetBSD: getgid.2,v 1.5 1995/02/27 12:32:53 cgd Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
