--- a/sys/getgroups.2
+++ b/sys/getgroups.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: getgroups.2,v 1.8 1995/02/27 12:32:57 cgd Exp $
 .\"	$NetBSD: getgroups.2,v 1.8 1995/02/27 12:32:57 cgd Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
