--- a/sys/getitimer.2
+++ b/sys/getitimer.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: getitimer.2,v 1.6 1995/10/12 15:40:54 jtc Exp $
 .\"	$NetBSD: getitimer.2,v 1.6 1995/10/12 15:40:54 jtc Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
