--- a/sys/getpeername.2
+++ b/sys/getpeername.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: getpeername.2,v 1.6 1995/10/12 15:40:56 jtc Exp $
 .\"	$NetBSD: getpeername.2,v 1.6 1995/10/12 15:40:56 jtc Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
