--- a/sys/getrlimit.2
+++ b/sys/getrlimit.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: getrlimit.2,v 1.8 1995/10/12 15:40:58 jtc Exp $
 .\"	$NetBSD: getrlimit.2,v 1.8 1995/10/12 15:40:58 jtc Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
