--- a/sys/getsockopt.2
+++ b/sys/getsockopt.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: getsockopt.2,v 1.7 1995/02/27 12:33:29 cgd Exp $
 .\"	$NetBSD: getsockopt.2,v 1.7 1995/02/27 12:33:29 cgd Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
