--- a/sys/ktrace.2
+++ b/sys/ktrace.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: ktrace.2,v 1.2 1995/02/27 12:33:58 cgd Exp $
 .\"	$NetBSD: ktrace.2,v 1.2 1995/02/27 12:33:58 cgd Exp $
 .\"
 .\" Copyright (c) 1993
