--- a/sys/link.2
+++ b/sys/link.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: link.2,v 1.7 1995/02/27 12:34:01 cgd Exp $
 .\"	$NetBSD: link.2,v 1.7 1995/02/27 12:34:01 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
