--- a/sys/madvise.2
+++ b/sys/madvise.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: madvise.2,v 1.7 1995/12/27 21:17:02 jtc Exp $
 .\"	$NetBSD: madvise.2,v 1.7 1995/12/27 21:17:02 jtc Exp $
 .\"
 .\" Copyright (c) 1991, 1993
