--- a/sys/mknod.2
+++ b/sys/mknod.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: mknod.2,v 1.6 1995/02/27 12:34:33 cgd Exp $
 .\"	$NetBSD: mknod.2,v 1.6 1995/02/27 12:34:33 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
