--- a/sys/mmap.2
+++ b/sys/mmap.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: mmap.2,v 1.5 1995/06/24 10:48:59 cgd Exp $
 .\"	$NetBSD: mmap.2,v 1.5 1995/06/24 10:48:59 cgd Exp $
 .\"
 .\" Copyright (c) 1991, 1993
