--- a/sys/mprotect.2
+++ b/sys/mprotect.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: mprotect.2,v 1.6 1995/10/12 15:41:08 jtc Exp $
 .\"	$NetBSD: mprotect.2,v 1.6 1995/10/12 15:41:08 jtc Exp $
 .\"
 .\" Copyright (c) 1991, 1993
