--- a/sys/msgget.2
+++ b/sys/msgget.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: msgget.2,v 1.1 1995/10/16 23:49:19 jtc Exp $	
 .\"	$NetBSD: msgget.2,v 1.1 1995/10/16 23:49:19 jtc Exp $	
 .\"
 .\" Copyright (c) 1995 Frank van der Linden
