--- a/sys/msync.2
+++ b/sys/msync.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: msync.2,v 1.8 1995/10/12 15:41:09 jtc Exp $
 .\"	$NetBSD: msync.2,v 1.8 1995/10/12 15:41:09 jtc Exp $
 .\"
 .\" Copyright (c) 1991, 1993
