--- a/sys/nfssvc.2
+++ b/sys/nfssvc.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: nfssvc.2,v 1.6 1995/02/27 12:35:08 cgd Exp $
 .\"	$NetBSD: nfssvc.2,v 1.6 1995/02/27 12:35:08 cgd Exp $
 .\"
 .\" Copyright (c) 1989, 1991, 1993
