--- a/sys/open.2
+++ b/sys/open.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: open.2,v 1.8 1995/02/27 12:35:14 cgd Exp $
 .\"	$NetBSD: open.2,v 1.8 1995/02/27 12:35:14 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
