--- a/sys/pathconf.2
+++ b/sys/pathconf.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: pathconf.2,v 1.2 1995/02/27 12:35:22 cgd Exp $
 .\"	$NetBSD: pathconf.2,v 1.2 1995/02/27 12:35:22 cgd Exp $
 .\"
 .\" Copyright (c) 1993
