--- a/sys/pipe.2
+++ b/sys/pipe.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: pipe.2,v 1.6 1995/02/27 12:35:27 cgd Exp $
 .\"	$NetBSD: pipe.2,v 1.6 1995/02/27 12:35:27 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
