--- a/sys/profil.2
+++ b/sys/profil.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: profil.2,v 1.3 1995/11/22 23:07:23 cgd Exp $
 .\"	$NetBSD: profil.2,v 1.3 1995/11/22 23:07:23 cgd Exp $
 .\"
 .\" Copyright (c) 1993
