--- a/sys/quotactl.2
+++ b/sys/quotactl.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: quotactl.2,v 1.8 1995/02/27 12:35:43 cgd Exp $
 .\"	$NetBSD: quotactl.2,v 1.8 1995/02/27 12:35:43 cgd Exp $
 .\"
 .\" Copyright (c) 1983, 1990, 1991, 1993
