--- a/sys/read.2
+++ b/sys/read.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: read.2,v 1.6 1995/02/27 12:35:47 cgd Exp $
 .\"	$NetBSD: read.2,v 1.6 1995/02/27 12:35:47 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
