--- a/sys/readlink.2
+++ b/sys/readlink.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: readlink.2,v 1.7 1995/02/27 12:35:54 cgd Exp $
 .\"	$NetBSD: readlink.2,v 1.7 1995/02/27 12:35:54 cgd Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
