--- a/sys/rename.2
+++ b/sys/rename.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: rename.2,v 1.7 1995/02/27 12:36:15 cgd Exp $
 .\"	$NetBSD: rename.2,v 1.7 1995/02/27 12:36:15 cgd Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
