--- a/sys/revoke.2
+++ b/sys/revoke.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: revoke.2,v 1.3 1995/10/12 15:41:11 jtc Exp $
 .\"	$NetBSD: revoke.2,v 1.3 1995/10/12 15:41:11 jtc Exp $
 .\"
 .\" Copyright (c) 1993
