--- a/sys/rmdir.2
+++ b/sys/rmdir.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: rmdir.2,v 1.7 1995/02/27 12:36:30 cgd Exp $
 .\"	$NetBSD: rmdir.2,v 1.7 1995/02/27 12:36:30 cgd Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
