--- a/sys/select.2
+++ b/sys/select.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: select.2,v 1.5 1995/06/27 22:32:28 cgd Exp $
 .\"	$NetBSD: select.2,v 1.5 1995/06/27 22:32:28 cgd Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
