--- a/sys/setpgid.2
+++ b/sys/setpgid.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: setpgid.2,v 1.8 1995/02/27 12:36:55 cgd Exp $
 .\"	$NetBSD: setpgid.2,v 1.8 1995/02/27 12:36:55 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
