--- a/sys/setuid.2
+++ b/sys/setuid.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: setuid.2,v 1.3 1995/02/27 12:37:06 cgd Exp $
 .\"	$NetBSD: setuid.2,v 1.3 1995/02/27 12:37:06 cgd Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
