--- a/sys/shutdown.2
+++ b/sys/shutdown.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: shutdown.2,v 1.5 1995/02/27 12:37:11 cgd Exp $
 .\"	$NetBSD: shutdown.2,v 1.5 1995/02/27 12:37:11 cgd Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
