--- a/sys/sigaction.2
+++ b/sys/sigaction.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: sigaction.2,v 1.7 1995/10/12 15:41:16 jtc Exp $
 .\"	$NetBSD: sigaction.2,v 1.7 1995/10/12 15:41:16 jtc Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1993
