--- a/sys/sigprocmask.2
+++ b/sys/sigprocmask.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: sigprocmask.2,v 1.6 1995/02/27 12:37:33 cgd Exp $
 .\"	$NetBSD: sigprocmask.2,v 1.6 1995/02/27 12:37:33 cgd Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
