--- a/sys/sigreturn.2
+++ b/sys/sigreturn.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: sigreturn.2,v 1.6 1995/02/27 12:37:40 cgd Exp $
 .\"	$NetBSD: sigreturn.2,v 1.6 1995/02/27 12:37:40 cgd Exp $
 .\"
 .\" Copyright (c) 1985, 1991, 1993
