--- a/sys/sigstack.2
+++ b/sys/sigstack.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: sigstack.2,v 1.5 1995/02/27 13:21:35 cgd Exp $
 .\"	$NetBSD: sigstack.2,v 1.5 1995/02/27 13:21:35 cgd Exp $
 .\"
 .\" Copyright (c) 1983, 1992, 1993
