--- a/sys/swapon.2
+++ b/sys/swapon.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: swapon.2,v 1.7 1995/02/27 12:38:21 cgd Exp $
 .\"	$NetBSD: swapon.2,v 1.7 1995/02/27 12:38:21 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
