--- a/sys/symlink.2
+++ b/sys/symlink.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: symlink.2,v 1.7 1995/02/27 12:38:34 cgd Exp $
 .\"	$NetBSD: symlink.2,v 1.7 1995/02/27 12:38:34 cgd Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
