--- a/sys/sync.2
+++ b/sys/sync.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: sync.2,v 1.4 1995/02/27 12:38:41 cgd Exp $
 .\"	$NetBSD: sync.2,v 1.4 1995/02/27 12:38:41 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
