--- a/sys/sysarch.2
+++ b/sys/sysarch.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: sysarch.2,v 1.4 1995/02/27 12:38:47 cgd Exp $
 .\"	$NetBSD: sysarch.2,v 1.4 1995/02/27 12:38:47 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1991 Regents of the University of California.
