--- a/sys/unlink.2
+++ b/sys/unlink.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: unlink.2,v 1.7 1995/02/27 12:39:13 cgd Exp $
 .\"	$NetBSD: unlink.2,v 1.7 1995/02/27 12:39:13 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
