--- a/sys/vfork.2
+++ b/sys/vfork.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: vfork.2,v 1.8 1997/07/10 07:54:13 mikel Exp $
 .\"	$NetBSD: vfork.2,v 1.8 1997/07/10 07:54:13 mikel Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
