--- a/sys/wait.2
+++ b/sys/wait.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: wait.2,v 1.6 1995/02/27 12:39:37 cgd Exp $
 .\"	$NetBSD: wait.2,v 1.6 1995/02/27 12:39:37 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993, 1994
