--- a/sys/write.2
+++ b/sys/write.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: write.2,v 1.6 1995/02/27 12:39:43 cgd Exp $
 .\"	$NetBSD: write.2,v 1.6 1995/02/27 12:39:43 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
