--- a/compat-43/sigblock.3
+++ b/compat-43/sigblock.3
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"	$OpenBSD: sigblock.3,v 1.1.1.1 1995/10/18 08:41:46 deraadt Exp $
+.\"	$OpenBSD: sigblock.3,v 1.2 1996/08/19 08:19:37 tholo Exp $
 .\"
 .Dd March 10, 1991
 .Dt SIGBLOCK 3
@@ -74,7 +74,7 @@ The previous set of masked signals is returned.
 .Xr kill 2 ,
 .Xr sigprocmask 2 ,
 .Xr sigaction 2 ,
-.Xr sigsetmask 2 ,
+.Xr sigsetmask 3 ,
 .Xr sigsetops 3
 .Sh HISTORY
 The
