--- a/compat-43/sigsetmask.3
+++ b/compat-43/sigsetmask.3
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"	$OpenBSD: sigsetmask.3,v 1.1.1.1 1995/10/18 08:41:46 deraadt Exp $
+.\"	$OpenBSD: sigsetmask.3,v 1.2 1996/08/19 08:19:42 tholo Exp $
 .\"
 .Dd March 10, 1991
 .Dt SIGSETMASK 3
@@ -72,7 +72,7 @@ The previous set of masked signals is returned.
 .Xr sigaction 2 ,
 .Xr sigsuspend 2 ,
 .Xr sigvec 3 ,
-.Xr sigblock 2 ,
+.Xr sigblock 3 ,
 .Xr sigsetops 3
 .Sh HISTORY
 The
