--- a/gen/siginterrupt.3
+++ b/gen/siginterrupt.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: siginterrupt.3,v 1.3 1995/02/27 05:50:57 cgd Exp $
+.\"	$OpenBSD: siginterrupt.3,v 1.2 1996/08/19 08:26:01 tholo Exp $
 .\"
 .\" Copyright (c) 1985, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -98,7 +98,7 @@ A \-1 value indicates that an invalid signal number has been supplied.
 .Xr sigaction 2 ,
 .Xr sigblock 2 ,
 .Xr sigpause 2 ,
-.Xr sigsetmask 2 .
+.Xr sigsetmask 3 .
 .Sh HISTORY
 The
 .Fn siginterrupt
