--- a/sys/write.2
+++ b/sys/write.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: write.2,v 1.6 1998/07/28 19:47:11 millert Exp $
+.\"	$OpenBSD: write.2,v 1.7 1998/08/05 16:49:35 millert Exp $
 .\"	$NetBSD: write.2,v 1.6 1995/02/27 12:39:43 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
@@ -208,6 +208,7 @@ array overflowed an
 .Xr lseek 2 ,
 .Xr open 2 ,
 .Xr pipe 2 ,
+.Xr poll 2 ,
 .Xr select 2
 .Sh STANDARDS
 The
