--- a/sys/madvise.2
+++ b/sys/madvise.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: madvise.2,v 1.7 1995/12/27 21:17:02 jtc Exp $
+.\"	$OpenBSD: madvise.2,v 1.8 1998/07/06 18:27:49 deraadt Exp $
 .\"	$NetBSD: madvise.2,v 1.7 1995/12/27 21:17:02 jtc Exp $
 .\"
 .\" Copyright (c) 1991, 1993
@@ -73,6 +73,10 @@ is set to indicate the error.
 .Xr mprotect 2 , 
 .Xr msync 2 ,
 .Xr munmap 2
+.Sh BUGS
+The
+.Fn madvise
+function is not implemented in the current vm subsystem.
 .Sh HISTORY
 The
 .Nm madvise
