--- a/gen/gethostname.3
+++ b/gen/gethostname.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: gethostname.3,v 1.5 1998/05/13 08:50:56 deraadt Exp $
+.\"	$OpenBSD: gethostname.3,v 1.6 1998/07/07 07:12:53 deraadt Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -96,7 +96,7 @@ If the buffer passed to
 .Fn getdomainname
 is smaller than
 .Dv MAXHOSTNAMELEN ,
-other operating systems may not gaurantee termination with NUL.
+other operating systems may not guarantee termination with NUL.
 .Sh HISTORY
 The
 .Nm
