--- a/termios/tcsetpgrp.3
+++ b/termios/tcsetpgrp.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: tcsetpgrp.3,v 1.3 1997/05/30 07:48:36 deraadt Exp $
+.\"	$OpenBSD: tcsetpgrp.3,v 1.4 1997/07/22 20:26:43 deraadt Exp $
 .\"
 .\" Copyright (c) 1991 The Regents of the University of California.
 .\" All rights reserved.
@@ -94,7 +94,7 @@ session as the calling process.
 .Xr tcgetpgrp 3
 .Sh STANDARDS
 The
-.Nm tcsetpgprp
+.Nm tcsetpgrp
 function is expected to be compliant with the
 .St -p1003.1-88
 specification.
