--- a/gen/isascii.3
+++ b/gen/isascii.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: isascii.3,v 1.2 1996/08/19 08:24:30 tholo Exp $
+.\"	$OpenBSD: isascii.3,v 1.3 1997/11/05 10:02:54 deraadt Exp $
 .\"
 .\" Copyright (c) 1989, 1991 The Regents of the University of California.
 .\" All rights reserved.
@@ -46,7 +46,7 @@ The
 .Fn isascii
 function tests for an
 .Tn ASCII
-character, which is any character with a value less than than or
+character, which is any character with a value less than or
 equal to 0177.
 .Sh SEE ALSO
 .Xr isalnum 3 ,
