--- a/gen/daemon.3
+++ b/gen/daemon.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: daemon.3,v 1.3 1995/02/25 13:41:12 cgd Exp $
+.\"	$OpenBSD: daemon.3,v 1.2 1996/08/19 08:22:11 tholo Exp $
 .\"
 .\" Copyright (c) 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -70,6 +70,7 @@ and
 .Xr setsid 2 .
 .Sh SEE ALSO
 .Xr setsid 2
+.Xr fork 2
 .Sh HISTORY
 The
 .Fn daemon
