--- a/gen/nlist.3
+++ b/gen/nlist.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: nlist.3,v 1.2 1996/08/19 08:25:07 tholo Exp $
+.\"	$OpenBSD: nlist.3,v 1.3 1998/08/17 22:00:10 millert Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -62,7 +62,9 @@ for the entry are copied into the list
 referenced by
 .Fa \&nl .
 No other data is copied.
-The last entry in the list is always
+The last entry in the list always has its
+.Fa n_name
+field set to
 .Dv NULL .
 .Sh RETURN VALUES
 The number of invalid entries is returned if successful; otherwise,
