--- a/sys/mount.2
+++ b/sys/mount.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mount.2,v 1.6 1997/03/09 19:41:16 millert Exp $
+.\"	$OpenBSD: mount.2,v 1.7 1998/06/08 17:17:15 deraadt Exp $
 .\"	$NetBSD: mount.2,v 1.12 1996/02/29 23:47:48 jtc Exp $
 .\"
 .\" Copyright (c) 1980, 1989, 1993
@@ -221,6 +221,9 @@ Another process currently holds a reference to
 .It Bq Er EFAULT
 .Fa Dir
 points outside the process's allocated address space.
+.It Bq Er EOPNOTSUPP
+.Fa Type
+is not supported by the kernel.
 .El
 .Pp
 The following errors can occur for a
