--- a/time/tzset.3
+++ b/time/tzset.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: tzset.3,v 1.5 1997/01/14 03:16:54 millert Exp $
+.\"	$OpenBSD: tzset.3,v 1.6 1998/01/18 23:25:01 millert Exp $
 .TH TZSET 3
 .SH NAME
 tzset \- initialize time conversion information
@@ -216,7 +216,7 @@ UTC is used.
 .ta \w'/usr/share/zoneinfo/posixrules\0\0'u
 /usr/share/zoneinfo	time zone information directory
 .br
-/usr/share/zoneinfo/localtime	local time zone file
+/etc/localtime		local time zone file
 .br
 /usr/share/zoneinfo/posixrules	used with POSIX-style TZ's
 .br
