--- a/gen/daemon.3
+++ b/gen/daemon.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: daemon.3,v 1.2 1996/08/19 08:22:11 tholo Exp $
+.\"	$OpenBSD: daemon.3,v 1.3 1998/10/05 20:08:55 art Exp $
 .\"
 .\" Copyright (c) 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -39,6 +39,7 @@
 .Nd run in the background
 .Sh SYNOPSIS
 .Fd #include <stdlib.h>
+.Ft int
 .Fn daemon "int nochdir" "int noclose"
 .Sh DESCRIPTION
 .Pp
