--- a/gen/setjmp.3
+++ b/gen/setjmp.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: setjmp.3,v 1.5 1995/02/27 05:50:26 cgd Exp $
+.\"	$OpenBSD: setjmp.3,v 1.2 1996/08/19 08:25:50 tholo Exp $
 .\"
 .\" Copyright (c) 1990, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -95,7 +95,7 @@ and
 .Fn setjmp
 and
 .Fn longjmp
-combinations may be used in the same program, however, individual
+combinations may be used in the same program.  However, individual
 calls may not, e.g. the
 .Fa env
 argument to
