--- a/db/man/hash.3
+++ b/db/man/hash.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: hash.3,v 1.3 1997/07/28 01:53:13 flipk Exp $
+.\"	$OpenBSD: hash.3,v 1.4 1997/07/28 15:11:59 flipk Exp $
 .\"	$NetBSD: hash.3,v 1.6 1996/05/03 21:26:50 cgd Exp $
 .\"
 .\" Copyright (c) 1997, Phillip F Knaack. All rights reserved.
@@ -142,7 +142,7 @@ Backward compatible interfaces to the routines described in
 .Xr dbm 3 ,
 and
 .Xr ndbm 3
-are provided, however these interfaces are not compatible with
+are provided, although these interfaces are not compatible with
 previous file formats.
 .Sh ERRORS
 The
