.Pp macros do not belong immiedately after .Sh section header lines

--- a/gen/sysconf.3
+++ b/gen/sysconf.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: sysconf.3,v 1.4 1998/06/02 06:10:24 deraadt Exp $
+.\"	$OpenBSD: sysconf.3,v 1.5 1998/06/15 17:54:59 mickey Exp $
 .\"
 .\" Copyright (c) 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -42,7 +42,6 @@
 .Ft long
 .Fn sysconf "int name"
 .Sh DESCRIPTION
-.Pp
 This interface is defined by
 .St -p1003.1-88 .
 A far more complete interface is available using
