--- a/db/man/ndbm.3
+++ b/db/man/ndbm.3
@@ -1,5 +1,5 @@
 .\" David Leonard, 1998. Placed in the public domain.
-.\" $OpenBSD: ndbm.3,v 1.3 1998/05/15 14:30:15 d Exp $
+.\" $OpenBSD: ndbm.3,v 1.4 1999/02/15 05:11:25 millert Exp $
 .Dd May 13, 1998
 .Os OpenBSD
 .Dt NDBM 3
@@ -158,7 +158,7 @@ Routines that return a
 .Ft datum
 indicate errors by setting the
 .Va dptr
-field set to
+field to
 .Dv NULL .
 .Pp
 The
