--- a/sys/mount.2
+++ b/sys/mount.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mount.2,v 1.9 1999/02/27 21:56:34 deraadt Exp $
+.\"	$OpenBSD: mount.2,v 1.10 1999/03/05 10:37:18 deraadt Exp $
 .\"	$NetBSD: mount.2,v 1.12 1996/02/29 23:47:48 jtc Exp $
 .\"
 .\" Copyright (c) 1980, 1989, 1993
@@ -329,6 +329,7 @@ or
 mount can also fail if the maximum number of filesystems are currently
 mounted.
 .Sh SEE ALSO
+.Xr statfs 2 ,
 .Xr mount 8 ,
 .Xr umount 8 ,
 .Xr mfs 8
