--- a/gen/siginterrupt.3
+++ b/gen/siginterrupt.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: siginterrupt.3,v 1.2 1996/08/19 08:26:01 tholo Exp $
+.\"	$OpenBSD: siginterrupt.3,v 1.3 1998/07/24 00:43:46 espie Exp $
 .\"
 .\" Copyright (c) 1985, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -96,8 +96,8 @@ A 0 value indicates that the call succeeded.
 A \-1 value indicates that an invalid signal number has been supplied.
 .Sh SEE ALSO
 .Xr sigaction 2 ,
-.Xr sigblock 2 ,
-.Xr sigpause 2 ,
+.Xr sigblock 3 ,
+.Xr sigpause 3 ,
 .Xr sigsetmask 3 .
 .Sh HISTORY
 The
