--- a/gen/usleep.3
+++ b/gen/usleep.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: usleep.3,v 1.4 1997/11/06 01:25:48 millert Exp $
+.\"	$OpenBSD: usleep.3,v 1.5 1997/12/24 09:04:04 tholo Exp $
 .\"
 .\" Copyright (c) 1986, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -93,10 +93,10 @@ specified a value of 1,000,000 or more microseconds.
 .Xr getitimer 2 ,
 .Xr nanosleep 2 ,
 .Xr setitimer 2 ,
-.Xr sigpause 2 ,
-.Xr alarm 3
+.Xr alarm 3 ,
+.Xr sigpause 3 ,
 .Xr sleep 3 ,
-.Xr ualarm 3 ,
+.Xr ualarm 3
 .Sh STANDARDS
 The
 .Fn usleep
