--- a/sys/sigaction.2
+++ b/sys/sigaction.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: sigaction.2,v 1.17 1998/07/24 00:43:50 espie Exp $
+.\"	$OpenBSD: sigaction.2,v 1.18 1999/02/27 21:56:49 deraadt Exp $
 .\"	$NetBSD: sigaction.2,v 1.7 1995/10/12 15:41:16 jtc Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1993
@@ -447,12 +447,12 @@ flags are options commonly found in other operating systems.
 .Xr kill 2 ,
 .Xr ptrace 2 ,
 .Xr sigaltstack 2 ,
-.Xr sigpause 2 ,
 .Xr sigprocmask 2 ,
 .Xr sigsuspend 2 ,
 .Xr wait 2 ,
 .Xr setjmp 3 ,
 .Xr sigblock 3 ,
+.Xr sigpause 3 ,
 .Xr sigsetmask 3 ,
 .Xr sigsetops 3 ,
 .Xr sigvec 3 ,
