--- a/gen/dirname.3
+++ b/gen/dirname.3
@@ -24,7 +24,7 @@
 .\" OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
 .\" ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $OpenBSD: basename.3,v 1.3 1998/06/21 22:13:38 millert Exp $
+.\" $OpenBSD: dirname.3,v 1.1 1998/07/04 08:53:03 deraadt Exp $
 .\"
 .Dd August 17, 1997
 .Dt DIRNAME 3
@@ -75,8 +75,7 @@ by subsequent calls (each function has its own separate storage).
 .Sh SEE ALSO
 .Xr basename 1 ,
 .Xr dirname 1 ,
-.Xr basename 3 ,
-.Xr dirname 1
+.Xr basename 3
 .Sh STANDARDS
 The
 .Fn dirname
