--- a/gen/sysctl.3
+++ b/gen/sysctl.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: sysctl.3,v 1.11 1998/06/15 17:55:00 mickey Exp $
+.\"	$OpenBSD: sysctl.3,v 1.12 1999/05/19 16:27:41 provos Exp $
 .\"
 .\" Copyright (c) 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -526,8 +526,8 @@ set to -1.
 .It Li tcp.sack
 Returns 1 if RFC2018 Selective Acknowledgements are enabled.
 .It Li tcp.mssdflt
-The maximum segement size that is used as default for non local
-connections.
+The maximum segment size that is used as default for non local
+connections. The default value is 512.
 .It Li udp.checksum
 Returns 1 when UDP checksums are being computed and checked.
 Disabling UDP checksums is strongly discouraged.
