--- a/gen/setmode.3
+++ b/gen/setmode.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: setmode.3,v 1.4 1998/06/15 17:54:58 mickey Exp $
+.\"	$OpenBSD: setmode.3,v 1.5 1998/09/24 02:49:20 millert Exp $
 .\"
 .\" Copyright (c) 1989, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -39,6 +39,7 @@
 .Nm setmode
 .Nd modify mode bits
 .Sh SYNOPSIS
+.Fd #include <unistd.h>
 .Ft mode_t
 .Fn getmode "const void *set" "mode_t mode"
 .Ft void *
