--- a/time/tzset.3
+++ b/time/tzset.3
@@ -1,9 +1,11 @@
-.\"	$OpenBSD: tzset.3,v 1.6 1998/01/18 23:25:01 millert Exp $
+.\"	$OpenBSD: tzset.3,v 1.7 1999/02/16 05:09:42 deraadt Exp $
 .TH TZSET 3
 .SH NAME
 tzset \- initialize time conversion information
 .SH SYNOPSIS
 .nf
+.B #include <time.h>
+.PP
 .B void tzset()
 .fi
 .SH DESCRIPTION
