--- a/time/tzset.3
+++ b/time/tzset.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: tzset.3,v 1.8 1999/05/20 15:22:53 aaron Exp $
+.\"	$OpenBSD: tzset.3,v 1.9 1999/05/25 00:49:42 aaron Exp $
 .Dd May 24, 1999
 .Dt TZSET 3
 .Os
@@ -8,7 +8,7 @@
 .Sh SYNOPSIS
 .Fd #include <time.h>
 .Ft void 
-.Fn tzset
+.Fn tzset "void"
 .Sh DESCRIPTION
 .Fn tzset
 uses the value of the environment variable
