--- a/compat-43/sigblock.3
+++ b/compat-43/sigblock.3
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"	$OpenBSD: sigblock.3,v 1.5 1999/05/16 19:54:43 alex Exp $
+.\"	$OpenBSD: sigblock.3,v 1.6 1999/05/23 14:10:58 aaron Exp $
 .\"
 .Dd March 10, 1991
 .Dt SIGBLOCK 3
@@ -42,7 +42,7 @@
 .Ft int
 .Fn sigblock "int mask"
 .Ft int
-.Fn sigmask signum
+.Fn sigmask "int signum"
 .Sh DESCRIPTION
 .Bf -symbolic
 This interface is made obsolete by:
