--- a/gen/nice.3
+++ b/gen/nice.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: nice.3,v 1.5 1999/05/16 19:54:59 alex Exp $
+.\"	$OpenBSD: nice.3,v 1.6 1999/05/23 14:11:00 aaron Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -39,7 +39,7 @@
 .Nd set program scheduling priority
 .Sh SYNOPSIS
 .Fd #include <nlist.h>
-.Fd int
+.Ft int
 .Fn nice "int incr"
 .Sh DESCRIPTION
 .Bf -symbolic
