--- a/gen/dirname.3
+++ b/gen/dirname.3
@@ -24,7 +24,7 @@
 .\" OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
 .\" ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $OpenBSD: dirname.3,v 1.1 1998/07/04 08:53:03 deraadt Exp $
+.\" $OpenBSD: dirname.3,v 1.2 1999/05/14 12:40:23 alex Exp $
 .\"
 .Dd August 17, 1997
 .Dt DIRNAME 3
@@ -54,7 +54,7 @@ returns a pointer to the string ".", signifying the current directory.
 On successful completion,
 .Fn dirname
 returns a pointer to the parent directory of
-.Ar path.
+.Ar path .
 .Pp
 If
 .Fn dirname
