--- a/gen/fnmatch.3
+++ b/gen/fnmatch.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: fnmatch.3,v 1.3 1997/06/13 13:01:44 deraadt Exp $
+.\"	$OpenBSD: fnmatch.3,v 1.4 1997/09/22 05:03:29 millert Exp $
 .\"
 .\" Copyright (c) 1989, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -93,14 +93,20 @@ must be explicitly matched by periods in
 .Fa pattern .
 If this flag is not set, then leading periods are treated as regular
 characters.
-The definition of ``leading'' is related to the specification of
-.Dv FNM_PATHNAME.
-A period is always ``leading'' if it is the first character in
+The definition of
+.Dq leading
+is related to the specification of
+.Dv FNM_PATHNAME .
+A period is always
+.Dq leading
+if it is the first character in
 .Ar string .
 Additionally, if
 .Dv FNM_PATHNAME
 is set,
-a period is ``leading'' if it immediately follows a slash.
+a period is
+.Dq leading
+if it immediately follows a slash.
 .It Dv FNM_LEADING_DIR
 Ignore
 .Nm /*
