--- a/sys/execve.2
+++ b/sys/execve.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: execve.2,v 1.8 1999/05/16 19:55:23 alex Exp $
+.\"	$OpenBSD: execve.2,v 1.9 1999/05/23 14:10:51 aaron Exp $
 .\"	$NetBSD: execve.2,v 1.9 1995/02/27 12:32:25 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1991, 1993
@@ -103,7 +103,7 @@ The argument
 is also a pointer to a null-terminated array of
 character pointers to null-terminated strings.
 A pointer to this array is normally stored in the global variable
-.Va environ.
+.Va environ .
 These strings pass information to the
 new process that is not directly an argument to the command (see
 .Xr environ 7 ) .
