--- a/gen/getcap.3
+++ b/gen/getcap.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: getcap.3,v 1.7 1999/02/27 21:55:04 deraadt Exp $
+.\"	$OpenBSD: getcap.3,v 1.8 1999/05/10 17:56:28 aaron Exp $
 .\"
 .\" Copyright (c) 1992, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -54,7 +54,7 @@
 .Ft int
 .Fn cgetent "char **buf" "char **db_array" "const char *name"
 .Ft int
-.Fn cgetset "char *ent"
+.Fn cgetset "const char *ent"
 .Ft int
 .Fn cgetmatch "char *buf" "const char *name"
 .Ft char *
