--- a/gen/fts.3
+++ b/gen/fts.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: fts.3,v 1.4 1997/09/01 02:48:46 millert Exp $
+.\"	$OpenBSD: fts.3,v 1.5 1998/03/01 00:02:23 deraadt Exp $
 .\"
 .\" Copyright (c) 1989, 1991, 1993, 1994
 .\"	The Regents of the University of California.  All rights reserved.
@@ -351,7 +351,7 @@ or
 .Dv FTS_PHYSICAL )
 must be specified.
 The options are selected by
-.Em or Ns 'ing
+.Em OR Ns 'ing
 the following values:
 .Bl -tag -width "FTS_PHYSICAL"
 .It Dv FTS_COMFOLLOW
