--- a/sys/chflags.2
+++ b/sys/chflags.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: chflags.2,v 1.8 1998/07/06 18:27:10 deraadt Exp $
+.\"	$OpenBSD: chflags.2,v 1.9 1999/02/27 21:56:09 deraadt Exp $
 .\"	$NetBSD: chflags.2,v 1.6 1995/02/27 12:32:03 cgd Exp $
 .\"
 .\" Copyright (c) 1989, 1993
@@ -58,7 +58,7 @@ has its flags changed to
 .Fa flags .
 .Pp
 The flags specified are formed by
-.Em or Ns 'ing
+.Em OR Ns 'ing
 the following values
 .Pp
 .Bl -tag -width "SF_IMMUTABLE" -compact -offset indent
