--- a/sys/mlock.2
+++ b/sys/mlock.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mlock.2,v 1.6 1999/02/27 21:56:32 deraadt Exp $
+.\"	$OpenBSD: mlock.2,v 1.7 1999/05/12 13:26:48 aaron Exp $
 .\"	$NetBSD: mlock.2,v 1.3 1995/06/24 10:42:03 cgd Exp $
 .\"
 .\" Copyright (c) 1993
@@ -133,7 +133,7 @@ The address given is not page aligned or the length is negative.
 Some portion of the indicated address range is not allocated.
 Some portion of the indicated address range is not locked.
 .El
-.Sh "SEE ALSO"
+.Sh SEE ALSO
 .Xr fork 2 ,
 .Xr mincore 2 ,
 .Xr minherit 2 ,
