--- a/sys/socketpair.2
+++ b/sys/socketpair.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: socketpair.2,v 1.6 1999/05/16 19:55:40 alex Exp $
+.\"	$OpenBSD: socketpair.2,v 1.7 1999/05/23 14:10:56 aaron Exp $
 .\"	$NetBSD: socketpair.2,v 1.5 1995/02/27 12:38:00 cgd Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
@@ -79,6 +79,7 @@ The address
 .Fa sv
 does not specify a valid part of the
 process address space.
+.El
 .Sh SEE ALSO
 .Xr pipe 2 ,
 .Xr read 2 ,
