--- a/gen/basename.3
+++ b/gen/basename.3
@@ -24,7 +24,7 @@
 .\" OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
 .\" ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $OpenBSD: basename.3,v 1.5 1999/05/14 12:40:23 alex Exp $
+.\" $OpenBSD: basename.3,v 1.6 1999/05/25 13:06:45 aaron Exp $
 .\"
 .Dd August 17, 1997
 .Dt BASENAME 3
@@ -71,8 +71,9 @@ The following error codes may be set in
 .Va errno :
 .Bl -tag -width Er
 .It Bq Er ENAMETOOLONG
-the path component to be returned was larger than
+The path component to be returned was larger than
 .Va MANPATHLEN .
+.El
 .Sh WARNINGS
 .Fn basename
 returns a pointer to internal static storage space that will be overwritten
