--- a/gen/dirname.3
+++ b/gen/dirname.3
@@ -24,7 +24,7 @@
 .\" OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
 .\" ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $OpenBSD: dirname.3,v 1.3 1999/05/25 13:06:45 aaron Exp $
+.\" $OpenBSD: dirname.3,v 1.4 1999/05/27 20:49:32 aaron Exp $
 .\"
 .Dd August 17, 1997
 .Dt DIRNAME 3
@@ -35,7 +35,7 @@
 .Sh SYNOPSIS
 .Fd #include <libgen.h>
 .Ft char *
-.Fn dirname "char *path"
+.Fn dirname "const char *path"
 .Sh DESCRIPTION
 The
 .Fn dirname
