--- a/gen/clock.3
+++ b/gen/clock.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: clock.3,v 1.5 1995/02/25 15:39:07 cgd Exp $
+.\"	$OpenBSD: clock.3,v 1.2 1996/08/19 08:21:50 tholo Exp $
 .\"
 .\" Copyright (c) 1990, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -56,7 +56,7 @@ calling process, measured in
 The
 .Fn clock
 function returns the amount of time used unless an error occurs, in which
-case the return value is \-1.
+case the return value is -1.
 .Sh SEE ALSO
 .Xr getrusage 2
 .Sh STANDARDS
