--- a/gen/lockf.3
+++ b/gen/lockf.3
@@ -1,4 +1,5 @@
-.\" $NetBSD: lockf.3,v 1.1 1997/12/20 20:23:17 kleink Exp $
+.\"	$OpenBSD$
+.\"	$NetBSD: lockf.3,v 1.1 1997/12/20 20:23:17 kleink Exp $
 .\"
 .\" Copyright (c) 1997 The NetBSD Foundation, Inc.
 .\" All rights reserved.
