use .Tn instead of .Em for logical/bitwise OR + AND

--- a/gen/fnmatch.3
+++ b/gen/fnmatch.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: fnmatch.3,v 1.5 1999/05/25 13:06:45 aaron Exp $
+.\"	$OpenBSD: fnmatch.3,v 1.6 1999/05/29 16:08:55 aaron Exp $
 .\"
 .\" Copyright (c) 1989, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -64,7 +64,8 @@ and
 .Fa string .
 The value of
 .Fa flags
-is the bitwise inclusive OR
+is the bitwise inclusive
+.Tn OR
 of any of the following
 constants, which are defined in the include file
 .Aq Pa fnmatch.h .
