--- a/sys/mmap.2
+++ b/sys/mmap.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mmap.2,v 1.13 1999/05/27 16:54:23 aaron Exp $
+.\"	$OpenBSD: mmap.2,v 1.14 1999/05/30 02:26:09 pjanzen Exp $
 .\"	$NetBSD: mmap.2,v 1.5 1995/06/24 10:48:59 cgd Exp $
 .\"
 .\" Copyright (c) 1991, 1993
@@ -79,7 +79,7 @@ deletes any previous mapping in the allocated address range.
 The protections (region accessibility) are specified in the
 .Fa prot
 argument by
-.Em OR Ns 'ing
+.Tn OR Ns 'ing
 the following values:
 .Pp
 .Bl -tag -width MAP_FIXEDX
