--- a/sys/msync.2
+++ b/sys/msync.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: msync.2,v 1.12 1999/05/27 16:21:00 aaron Exp $
+.\"	$OpenBSD: msync.2,v 1.13 1999/05/27 20:49:36 aaron Exp $
 .\"	$NetBSD: msync.2,v 1.8 1995/10/12 15:41:09 jtc Exp $
 .\"
 .\" Copyright (c) 1991, 1993
@@ -74,7 +74,7 @@ are unpredictable except after an
 The
 .Fa flags
 argument is formed by
-.Em OR Ns 'ing
+.Tn OR Ns 'ing
 the following values
 .Pp
 .Bd -literal -offset indent -compact
