.Dd should not be given abbreviated month names

--- a/time/ctime.3
+++ b/time/ctime.3
@@ -1,7 +1,7 @@
-.\"	$OpenBSD: ctime.3,v 1.12 1999/04/20 02:04:11 aaron Exp $
+.\"	$OpenBSD: ctime.3,v 1.13 1999/05/16 19:55:44 alex Exp $
 .\"
 .\"
-.Dd Feb 16, 1999
+.Dd February 16, 1999
 .Dt CTIME 3
 .Os
 .Sh NAME
