--- a/time/strftime.3
+++ b/time/strftime.3
@@ -34,9 +34,9 @@
 .\" SUCH DAMAGE.
 .\"
 .\"	from: @(#)strftime.3    5.12 (Berkeley) 6/29/91
-.\"     $OpenBSD: strftime.3,v 1.6 1999/01/04 20:00:10 millert Exp $
+.\"     $OpenBSD: strftime.3,v 1.7 1999/05/25 21:16:27 aaron Exp $
 .\"
-.Dd Jan 18, 1998
+.Dd January 18, 1998
 .Dt STRFTIME 3
 .Os
 .Sh NAME
