fix includes; bde

--- a/net/getnameinfo.3
+++ b/net/getnameinfo.3
@@ -39,6 +39,7 @@
 .Nm getnameinfo
 .Nd address-to-nodename translation in protocol-independent manner
 .Sh SYNOPSIS
+.Fd #include <sys/types.h>
 .Fd #include <sys/socket.h>
 .Fd #include <netdb.h>
 .Ft int
