--- a/net/getaddrinfo.3
+++ b/net/getaddrinfo.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD$
+.\"	$OpenBSD: getaddrinfo.3,v 1.3 1999/07/05 04:40:59 aaron Exp $
 .\" Copyright (c) 1983, 1987, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
@@ -42,6 +42,7 @@
 .Nm gai_strerror
 .Nd nodename-to-address translation in protocol-independent manner
 .Sh SYNOPSIS
+.Fd #include <sys/types.h>
 .Fd #include <sys/socket.h>
 .Fd #include <netdb.h>
 .Ft int
