OpenBSD does not support non-standard mdoc macros like .Lb.

--- a/sys/kqueue.2
+++ b/sys/kqueue.2
@@ -1,3 +1,4 @@
+.\"	$OpenBSD$
 .\" Copyright (c) 2000 Jonathan Lemon
 .\" All rights reserved.
 .\"
@@ -31,8 +32,6 @@
 .Nm kqueue ,
 .Nm kevent
 .Nd kernel event notification mechanism
-.Sh LIBRARY
-.Lb libc
 .Sh SYNOPSIS
 .Fd #include <sys/types.h>
 .Fd #include <sys/event.h>
