Use .Pp, not a blank line.

--- a/sys/getpeereid.2
+++ b/sys/getpeereid.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD$
+.\"	$OpenBSD: getpeereid.2,v 1.1 2001/06/26 19:56:52 dugsong Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -46,7 +46,7 @@
 returns the effective user ID and group ID of the peer connected to
 the UNIX domain socket
 .Fa s .
-
+.Pp
 One common use is for UNIX domain servers to determine the credentials
 of clients that have connected to it.
 .Pp
