SEE ALSO corrections. millert ok.

--- a/sys/_exit.2
+++ b/sys/_exit.2
@@ -105,9 +105,9 @@ can never return.
 .Xr fork 2 ,
 .Xr intro 2 ,
 .Xr sigaction 2 ,
-.Xr sysexits 3 ,
 .Xr wait 2 ,
-.Xr exit 3
+.Xr exit 3 ,
+.Xr sysexits 3
 .Sh STANDARDS
 The
 .Fn _exit
