--- a/sys/getuid.2
+++ b/sys/getuid.2
@@ -73,8 +73,8 @@ functions are always successful, and no return value is reserved to
 indicate an error.
 .Sh SEE ALSO
 .Xr getgid 2 ,
-.Xr setreuid 3 ,
-.Xr setuid 2
+.Xr setuid 2 ,
+.Xr setreuid 3
 .Sh STANDARDS
 The
 .Fn getuid
