--- a/sys/setresuid.2
+++ b/sys/setresuid.2
@@ -85,9 +85,9 @@ was invalid.
 .Xr getuid 2 ,
 .Xr issetugid 2 ,
 .Xr setgid 2 ,
-.Xr setregid 2 ,
-.Xr setreuid 2 ,
-.Xr setuid 2
+.Xr setuid 2 ,
+.Xr setregid 3 ,
+.Xr setreuid 3
 .Sh STANDARDS
 These functions are not part of the
 .St -p1003.1
